# le-grinder

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  README.md  watchdog.sh
data/: grinder_state.json.tmp
deploy/: le-grinder.service
frontend/: index.html
src/: config.rs  dashboard.rs  grinder.rs  main.rs  paper.rs  remote_guard.rs  state.rs  tokyo.rs  types.rs
src/connectors/: binance.rs  mod.rs  pm_ws.rs  polymarket.rs
src/engines/: mod.rs  radar.rs
src/live/: mod.rs  orders.rs
