[package]
name = "le_grinder"
version = "0.1.0"
edition = "2021"
authors = ["Quantitative Trading Team"]

[dependencies]
# Asynchronisme & Runtime
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"

# Sérialisation & Réseau
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Utilitaires, Logs & Configuration
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
